# AGIZero

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  Readme.txt  Topoki.sln  alphabeta.cpp  alphabeta.h  benchmark.cpp  benchmark.h  board.cpp  board.h  constants.h  eval.cpp  eval.h  main.cpp  material.cpp  material.h  misc.cpp  misc.h  movegen.cpp  movegen.h  options.cpp  options.h  pawneval.cpp  pawneval.h  pieces.cpp  pieces.h  position.cpp  position.h  printer.cpp  printer.h  search.cpp  search.h  table.cpp  table.h  threads.cpp  threads.h
AGI/src/: alphabeta.cpp  alphabeta.h  bitboard.h  constants.h  eval.cpp  eval.h  main.cpp  misc.cpp  misc.h  movegen.cpp  movegen.h  options.cpp  options.h  parallel.cpp  parallel.h  pawnplay.cpp  pawnplay.h  position.cpp  position.h  psqt.cpp  psqt.h  search.cpp  search.h  table.cpp  table.h  types.h  uci.cpp  uci.h
